--- a/store.html
+++ b/store.html
@@ -283,7 +283,7 @@ login now
 
 <div class="text-heading m-3"><h2>Why cat store?</h2></div>
 
-<div class="text-info m-3"><p>keeping your cat at a healthy weight by starting with fresh ingredients and ending with fresh cat food. Also, dont miss out our cat toys to delight your cats!</p>
+<div class="text-info m-3"><p>Keeping your cat at a healthy weight by starting with fresh ingredients and ending with fresh cat food. Also, dont miss out our cat toys to delight your cats!</p>
 </div>
 
 
