--- a/store.html
+++ b/store.html
@@ -568,7 +568,7 @@ login now
     
         <div class="info">
             <h2>Slicker Brush</h2>
-            <p>It has long pins to penetrate deep into longer coats. Extra Long ergonomic Handle reduces hand and arm fatigue. Effortlessly removes debris, mats and dead hair</p>
+            <p>It has long pins to penetrate deep into longer coats. Extra long ergonomic handle reduces hand and arm fatigue. Effortlessly removes debris, mats and dead hair</p>
             <span class="price">$120.00</span>
             <a class="add-cart-btn addToCart">add to cart</a>
             <a class="add-wish">add to wishlist</a>
